# fairseq-demo

./: README.md  pyproject.toml
scripts/: exe.sh  fairseq_generate.sh  fairseq_preprocess.sh  fairseq_train.sh  preprocess.sh
srcs/: apply_spm.py  preprocess_tanaka_corpus.py  split_corpus_train_dev_test.py
